--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
 :root {
     --bright-orange: hsl(31, 77%, 52%);
@@ -17,17 +18,22 @@
 body, html {
     height: 100%;
     font-size: 15px;
+    background-color: var(--very-light-gray);
 }
 
 h2 {
     font-family: 'Big Shoulders Display', cursive;
     font-size: 2.5em;
-    color: white;
+    color: var(--very-light-gray);
     text-transform: uppercase;
+    line-height: 2em;
 }
 
 p {
-    color: white;
+    color: var(--transparent-white);
+    font-family: 'Lexend Deca', sans-serif;
+    line-height: 1.75em;
+    font-size: 0.9em;
 }
 
 .container {
@@ -42,6 +48,7 @@ p {
 
 .card {
     padding: 48px;
+    height: 350px;
 }
 
 .card:nth-child(1) {
