--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ h2 {
     font-size: 2.5em;
     color: var(--very-light-gray);
     text-transform: uppercase;
-    line-height: 2em;
+    line-height: 2.5em;
+    flex: 1;
 }
 
 p {
@@ -34,6 +35,28 @@ p {
     font-family: 'Lexend Deca', sans-serif;
     line-height: 1.75em;
     font-size: 0.9em;
+    flex: 2;
+}
+
+button {
+    color: inherit;
+    padding: 1em 2em;
+    border-radius: 2em;
+    border: none;
+    flex: 0.1;
+}
+
+button:hover {
+    color: white;
+    border-width: 1px;
+    border-style: solid;
+    border-color: white;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+img {
+    width: max-content;
 }
 
 .container {
@@ -48,17 +71,24 @@ p {
 
 .card {
     padding: 48px;
-    height: 350px;
+    height: 400px;
+    display: flex;
+    flex-flow: column;
 }
 
 .card:nth-child(1) {
+    color: var(--bright-orange);
     background-color: var(--bright-orange);
+    border-radius: 10px 0 0 10px;
 }
 
 .card:nth-child(2) {
+    color: var(--dark-cyan);
     background-color: var(--dark-cyan);
 }
 
 .card:nth-child(3) {
+    color: var(--very-dark-cyan);
     background-color: var(--very-dark-cyan);
+    border-radius: 0 10px 10px 0;
 }
